fix responsive menu issue on iphone x

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -83,7 +83,7 @@
   }
 
   .nav-link {
-    bottom: 120px;
+    bottom: 90px;
   }
 
   .projects {
